--- a/R_files_to_run_models/README
+++ b/R_files_to_run_models/README
@@ -2,6 +2,18 @@ Fit_PE_FE_one - fits the piecewise exponential model with one cut point. Note yo
 
 Fit_PE_FE_two - fits the piecewise exponential model with two cut points. Note you will need to specify on line 74 which cut points you wish to include within your model.
 
+Fit_RP_FE_lnt_1knot - fits the Royston-Parmar model with 1 knot. 
 
-Scenarios 5-8 - When running the R files "Fit_RP_FE_1knot", "Fit_RP_FE_2knots", "Fit_RP_FE_3knots" and "Fit_RP_FE_4knots" you will need to change the number of studies in each meta-analysis (line 30) and the number of patients in each study (line 33) to reflect that there are 10 studies in each meta-analysis.
-Scenarios 5-8 - When running the R files "Fit_PE_FE_one" and "Fit_PE_FE_two" you will need to change the number of studies in each meta-analysis (line 28) to reflect that there are 10 studies in each meta-analysis.
+Fit_RP_FE_lnt_2knots - fits the Royston-Parmar model with 2 knots. 
+
+Fit_RP_FE_lnt_3knots - fits the Royston-Parmar model with 3 knots. 
+
+Fit_RP_FE_lnt_4knots - fits the Royston-Parmar model with 4 knots. 
+
+Fit_FP_1stOrder - fits the first order fractional polynomial models.
+
+Fit_FP_2ndOrder - fits second order fractional polynomial models.
+
+# Important - Scenarios 5-8
+1. When running the R files "Fit_RP_FE_1knot", "Fit_RP_FE_2knots", "Fit_RP_FE_3knots" and "Fit_RP_FE_4knots" you will need to change the number of studies in each meta-analysis (line 30) and the number of patients in each study (line 33) to reflect that there are 10 studies in each meta-analysis.
+2. When running the R files "Fit_PE_FE_one" and "Fit_PE_FE_two" you will need to change the number of studies in each meta-analysis (line 28) to reflect that there are 10 studies in each meta-analysis.
