--- a/BreastCancerData/FP/README
+++ b/BreastCancerData/FP/README
@@ -1,5 +1,5 @@
-# The folder Simulation1/BrestCancerData/FP contains files for fitting fractional polynomial models to the breast cancer data
+# The folder 'Simulation1/BrestCancerData/FP' contains files for fitting fractional polynomial models to the breast cancer data
 
 # 1. First the IPD data needs to be aggregated - the file cr_aggregate_data does this calling the file Function_anova_data and produces the file breast_aggregate_data_fp.csv
-# 2. First order fractional polynomial models are fitted in Fit_FP1.R. This files calls the function Function_FP1.R.
-# 3. Second order fractional polynomial models are fitted in Fit_FP2.R. This files calls the function Function_FP2.R. 
+# 2. First order fractional polynomial models are fitted in Fit_FP1.R. This files calls the function Function_FP1.R which itself calls functions from the folder 'Simulation1/OpenBUGS_model_txt_files'.
+# 3. Second order fractional polynomial models are fitted in Fit_FP2.R. This files calls the function Function_FP2.R which itself calls functions from the folder 'Simulation1/OpenBUGS_model_txt_files'. 
